Mon Apr 15 00:22:09 2013  Shota Fukumori  <her@sorah.jp>

	* ext/objspace/objspace.c: Fix typo in doc. Patch by Sho Hashimoto.
	  [Bug #8116] [ruby-dev:47177]

Mon Apr 15 00:15:04 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (HAVE_METACLASS_P): should check FL_SINGLETON flag before get
	  instance variable to get rid of wrong warning about __attached__.
	  [ruby-core:53839] [Bug #8188]

Mon Apr 15 00:13:13 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/file.c (code_page): use cp1252 instead of cp20127 as US-ASCII.
	  fix [ruby-core:53079] [Bug #7996]
	  reported and patched by mmeltner (Michael Meltner).

Mon Apr 15 00:07:31 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/io.h: undef POSIX compliant names on AIX, which are no
	  longer needed.  patch suggested by edelsohn (David Edelsohn) in
	  [ruby-core:53815].  [Bug #8174]

Mon Apr 15 00:07:31 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/io.h: rename SVR3,4 member names as POSIX compliant,
	  to get rid of conflict on AIX.  [ruby-core:53765] [Bug #8174]

Sun Apr 14 23:49:48 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (configuration): not include all CFLAGS in CXXFLAGS, to
	  use different set than C for C++.  [ruby-core:45273] [Bug #6504]

Sun Apr 14 23:43:06 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/fiddle/closure.c (initialize): check mprotect's return value.
	  If mprotect is failed because of PaX or something, its function call
	  will cause SEGV.
	  http://c5664.rubyci.org/~chkbuild/ruby-trunk/log/20130401T210301Z.diff.html.gz

Sun Apr 14 23:19:55 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (MAIN_DOES_NOTHING): ensure symbols for tests to be
	  preserved.  [ruby-core:53745] [Bug #8169]

Sun Apr 14 23:19:55 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (MAIN_DOES_NOTHING): force to refer symbols for tests
	  to be preserved.  [ruby-core:53745] [Bug #8169]
